# haskellbook

./: README.md
algebraic-datatypes/: exercises.hs  logic-goats.hs  quad.txt  tree.hs  vehicles.txt
all-you-need-is-lambda/: exercises.txt
applicative/: badmonoid.hs  examples.hs  exercises.hs  lookups.hs  validation.hs  ziplist.hs
basic-datatypes/: exercises.txt
basic-datatypes/ch5/: arith3.hs  exercises.txt  matching.txt  parametricity.txt
basic-libraries/: .gitignore  dlist.hs  queue.hs
building-projects/hangman/: stack.yaml
building-projects/hangman/src/: Main.hs
building-projects/hello/src/: DogsRule.hs  Hello.hs
ch1/: equivalence.txt
ch10/: db.hs  scans.txt  understanding-folds.txt
ch11/: cardinality.txt  dog-types.txt  exercises.txt  for-example.txt  jammin.hs  pity-the-bool.txt  programmers.hs
ch12/: exercises.hs
ch13/hangman/: hangman.cabal
ch13/hello/: hello.cabal
ch13/hello/exe/: Main.hs
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch2/: comprehension.hs  exercises.txt  head.txt  let-where.txt  parens.txt
ch3/: area.hs  exercises.txt  rvrs.hs  scope.txt  syntax.txt
ch4/: find-mistakes.txt  mood-swing.txt
ch5/: apply-yourself.txt  type-arguments.txt
ch6/: eq.hs  exercises.txt  tuple-experiment.txt  will-they-work.txt
ch7/: casePractice.hs  exercises.txt  grab-bag.txt  guard-duty.txt  roundTrip.hs
ch8/: dividedByFixed.hs  exercises.txt  multiply.hs  numbers.hs
ch9/: cipher.hs  comprehend-thy-lists.txt  enumFromTo.hs  exercises.txt  filtering.txt  more-bottoms.txt  normal-form.txt  square-cube.hs
composing-types/: bifunctor.hs  instances.hs
fingerd/: fingerd.cabal
fingerd/src/: Debug.hs  Init.hs  Main.hs  UserDb.hs
fingerd/src/Finger/: Display.hs  Model.hs  Network.hs  Queries.hs  Service.hs
foldable/: exercises.hs  library.hs
folding-lists/: exercises.txt  understanding-folds.txt
functor/: be-kind.txt  exercises.hs  fmap-compose-types.txt  functor-instances.hs  heavy-lifiting.hs  possibly.hs  quickcheck-functor.hs  replace-experiment.hs  sum.hs
hello-haskell/: heal.txt
io/: cipher.hs  ini.hs  one.ini  two.ini
lists/: bottom-madness.txt  tyger.hs  zipping.txt
monad/: badmonad.hs  bind.hs  either.hs  exercises.hs
monad-transformers/: eithert.hs  exercises.hs  hit-counter.hs  maybet.hs  morra.hs  readert.hs  statet.hs  wrap-it-up.hs
monoid-semigroup/: maybe.hs  monoid-exercises.hs  monoidCheck.hs  optional.hs  semigroup-exercises.hs
more-functional-patterns/: artful-dodgy.txt  roundTrip.hs  variety-pack.txt
nonstrictness/: exercises.txt  make-it-bottom.hs
parser-combinators/: alt-parsing.hs  decimal-or-fraction.hs  ini-parsing.hs  learn-parsers.hs  marshall-numerics.hs  marshalling.hs  parse-integers.hs  parse-ip.hs  parse-log.hs  parse-phone-numbers.hs  parsing-fractions.hs  polymorphic-bt.hs  semver.hs
reader/: ask.hs  beginning.hs  do-you-even-lift.hs  exercises.hs  warming-up.hs
recursion/: applyTimes.txt  exercises.txt  mccarthy.hs
signaling-adversity/: exercises.hs  exercises.txt
state/: exercises.hs  fizzbuzz-differently.hs  fizzbuzz.hs  fizzbuzz2.hs  moi.hs  random-example-2.hs  random-example.hs
testing/addition/: Addition.hs  addition.cabal
testing/exercises/: exercises.cabal
traversable/: exercises.hs
(+8 files in other folders)
