name:                addition
version:             0.1.0.0
synopsis:            Initial project template from stack
license-file:        LICENSE
author:              Chicken Little
maintainer:          sky@isfalling.org
copyright:           2016 CL
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010
